Fixes height alignment for imac and chat container.

--- a/public/sass/components/components.chat.scss
+++ b/public/sass/components/components.chat.scss
@@ -4,13 +4,23 @@
   @include mq($until: desktop) {
     grid-column: col-start-1 / col-end-2;
   }
+
+  // container with fixed aspect ratio (same as neighbour svg image)
+  &__container {
+    width: 100%;
+    padding-top: 85%;
+    position: relative;
+  }
 }
 
 .c-chat-history {
-  position: relative; // for --sticky-top items
+  position: absolute; // --sticky-top items is relative to that
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
-  height: 45vh;
   padding: 1.5rem 1rem 1.5rem 1.5rem;
   border: 1px solid #fff;
   border-radius: 1.5rem;
